--- a/index.html
+++ b/index.html
@@ -473,11 +473,11 @@ async function loadSheetJSON(){
     // tea memo
     setText("teaMemo", data.teaMemo || "");
 
-    // story（※現状Apps Scriptが返していないなら空のまま。必要なら後でタブ追加できます）
+    // story
     setHTML("satokawaCore", (data.story?.satokawaCore || "").replace(/\\n/g, "\n").replace(/\n/g, "<br/>"));
     setHTML("giahs", (data.story?.giahs || "").replace(/\\n/g, "\n").replace(/\n/g, "<br/>"));
 
-    // highlights / photo slots（※同上。返してない場合は空でOK）
+    // highlights / photo slots
     renderList(
       "highlights",
       (data.highlights || []).map(s => (s || "").replace(/\\n/g, "\n").replace(/\n/g, "<br/>")),
