--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
         <div class="hr"></div>
 
-        <b>集合時の一言（EN）</b>
+        <b>集合時の確認事項</b>
         <div class="muted" id="meetScript"></div>
       </section>
 
